# OpenYXDB

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pixi.toml  pyproject.toml  temp.yxdb
.github/workflows/: ci.yml  publish.yml
include/: Open_AlteryxYXDB.h  SrcLib_Replacement.h  stdafx.h
include/AyxData/dc/sdk/: GenericEngineBase.h
include/Base/: Base_ImpExp.h  MiniXmlParser.h  Portability_Linux.h  String_ImpExp.h
include/RecordLib/: RecordLibExport.h
python/: _openyxdb.cpp  openyxdb.py
python/openyxdb/: __init__.py  __main__.py
src/: Open_AlteryxYXDB.cpp  StringToDouble.cpp
test/: test_yxdb.cpp
tests/: test_openyxdb.py  test_scan_corpus.py
