[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "openyxdb"
version = "1.0.0"
description = "Read and write Alteryx YXDB files"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Sigilweaver/OpenYXDB"
Source = "https://github.com/Sigilweaver/OpenYXDB"
Issues = "https://github.com/Sigilweaver/OpenYXDB/issues"

[project.optional-dependencies]
arrow = ["pyarrow>=14.0"]
pandas = ["pyarrow>=14.0", "pandas>=2.0"]
polars = ["pyarrow>=14.0", "polars>=0.20"]
all = ["pyarrow>=14.0", "pandas>=2.0", "polars>=0.20"]
test = ["pytest>=7.0", "pyarrow>=14.0", "pandas>=2.0", "polars>=0.20"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DOPENYXDB_BUILD_TESTS=OFF"]
wheel.packages = ["python/openyxdb"]

[tool.scikit-build.cmake.define]
OPENYXDB_BUILD_TESTS = "OFF"
OPENYXDB_BUILD_PYTHON = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]
